# decenttree

./: CMakeLists.txt  distancematrix.h  flatmatrix.cpp  flatmatrix.h  sequence.h
utils/: vectortypes.h
